# gocam-cost-estimates

./: .gitignore  CLAUDE.md  README.md  SPEC.md  justfile  pyproject.toml
.github/workflows/: pages.yml
data/: curation_metrics.parquet  example_triples.parquet  examples.parquet  true_gocam_index.parquet  versions.parquet
docs/: index.html
notebooks/: cost_estimates.py
src/gocam_cost/: __init__.py  cli.py  config.py  db.py  extract.py  fetch.py  gitdata.py  metrics.py  patterns.py  publish.py  report.py  true_gocams.py  viz.py
tests/: test_db.py  test_extract.py  test_metrics.py
