[project]
name = "gocam-cost-estimates"
version = "0.1.0"
description = "Estimate GO-CAM curation cost/effort from noctua-models git history, backed by a DuckDB triple-store-over-time."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyoxigraph>=0.4",
    "duckdb>=1.0",
    "marimo>=0.9",
    "matplotlib>=3.8",
    "typer>=0.12",
    "pyarrow>=16",
    "pandas>=2.2",
    "httpx>=0.27",
]

[project.scripts]
gocam-cost = "gocam_cost.cli:app"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gocam_cost"]
